--- a/index.html
+++ b/index.html
@@ -582,63 +582,97 @@
                 <!-- Slides -->
                   <div class="slideshow-container relative">
                 <!-- Slides -->
-              <div class="slide fade" role="group" aria-label="Slide 1 of 10">
-    <img src="/BagChk/images/Air.jpg" alt="Chicago Air and Water Show" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-            <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Air and Water Show</h3>
-        <p class="text-[var(--text-light)]">Look up! Jets roar over Lake Michigan in this breathtaking summer spectacle. BagChk keeps your hands free for the perfect photo moment.</p>
-    </div>
-</div>
-                <div class="slide fade" role="group" aria-label="Slide 2 of 10">                        
-                    <img src="/BagChk/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+             <section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Explore Chicago Events</h2>
+        <br></br>
+        <div class="slideshow-container relative">
+            <!-- Slides -->
+            <div class="slide fade" role="group" aria-label="Slide 1 of 10">
+                <img src="/BagChk/images/Air.jpg" alt="Chicago Air and Water Show" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Air and Water Show</h3>
+                    <p class="text-[var(--text-light)]">Look up! Jets roar over Lake Michigan in this breathtaking summer spectacle. BagChk keeps your hands free for the perfect photo moment.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: August 15-16, 2025</p> <!-- Added Date -->
+                </div>
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 2 of 10">
+                <img src="/BagChk/images/garden.jpg" alt="Chicago Botanic Garden" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Botanic Garden</h3>
-                        <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
-                    </div>
+                    <p class="text-[var(--text-light)]">Stroll through the serene landscapes of the Chicago Botanic Garden. Store your luggage with BagChk to explore 385 acres of natural beauty hands-free.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: Open year-round</p> <!-- Added Date -->
                 </div>
-                <div class="slide fade" role="group" aria-label="Slide 3 of 10">
-                    <img src="/BagChk/images/trade.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 3 of 10">
+                <img src="/BagChk/images/trade.jpg" alt="Tradeshow at McCormick Place" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Tradeshow at McCormick Place</h3>
-                        <p class="text-[var(--text-light)]">Attend a world-class tradeshow at McCormick Place without carrying your bags. BagChk offers secure storage nearby for a seamless experience.</p>
-                    </div>
+                    <p class="text-[var(--text-light)]">Attend a world-class tradeshow at McCormick Place without carrying your bags. BagChk offers secure storage nearby for a seamless experience.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: September 24-26, 2025</p> <!-- Added Date -->
                 </div>
-                <div class="slide fade" role="group" aria-label="Slide 4 of 10">
-                    <img src="/BagChk/images/graduation.jpg" alt="Student Graduation Event" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 4 of 10">
+                <img src="/BagChk/images/graduation.jpg" alt="Student Graduation Event" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Student Graduations & Events</h3>
-                        <p class="text-[var(--text-light)]">Celebrate graduations and student events in Chicago without the burden of luggage. BagChk keeps your belongings safe while you enjoy the moment.</p>
-                    </div>
+                    <p class="text-[var(--text-light)]">Celebrate graduations and student events in Chicago without the burden of luggage. BagChk keeps your belongings safe while you enjoy the moment.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: Varies by institution</p> <!-- Added Date -->
                 </div>
-                <div class="slide fade" role="group" aria-label="Slide 5 of 10">
-                    <img src="/BagChk/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 5 of 10">
+                <img src="/BagChk/images/solider.jpg" alt="Concert at Soldier Field" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Concerts at Soldier Field</h3>
-                        <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
-                    </div>
+                    <p class="text-[var(--text-light)]">Rock out at a concert at Soldier Field. With BagChk, store your bags securely nearby and dance the night away without worry.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: June 5-7, 2025</p> <!-- Added Date -->
                 </div>
-                    <!-- Additional Slides -->
-<div class="slide fade" role="group" aria-label="Slide 6 of 10">
-    <img src="/BagChk/images/marathon.jpg" alt="Chicago Marathon" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-            <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Marathon</h3>
-        <p class="text-[var(--text-light)]">Join thousands of runners in one of the world’s premier marathons. Store your gear with BagChk and focus on the finish line.</p>
-    </div>
-</div>
-<div class="slide fade" role="group" aria-label="Slide 7 of 10">
-    <img src="/BagChk/images/blues.jpg" alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-            <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Blues Festival</h3>
-        <p class="text-[var(--text-light)]">Feel the soul of the city at the world’s largest free blues festival. Let BagChk handle your bags while you groove in Millennium Park.</p>
-    </div>
-</div>
-                        <div class="slide fade active" role="group" aria-label="Slide 8 of 10">
-                    <img src="/BagChk/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
-                    <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
-                        <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
-                        <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
-                    </div>
+            </div>
+            <!-- Additional Slides -->
+            <div class="slide fade" role="group" aria-label="Slide 6 of 10">
+                <img src="/BagChk/images/marathon.jpg" alt="Chicago Marathon" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Marathon</h3>
+                    <p class="text-[var(--text-light)]">Join thousands of runners in one of the world’s premier marathons. Store your gear with BagChk and focus on the finish line.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: October 12, 2025</p> <!-- Added Date -->
                 </div>
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 7 of 10">
+                <img src="/BagChk/images/blues.jpg" alt="Chicago Blues Festival" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Blues Festival</h3>
+                    <p class="text-[var(--text-light)]">Feel the soul of the city at the world’s largest free blues festival. Let BagChk handle your bags while you groove in Millennium Park.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: June 11-14, 2025</p> <!-- Added Date -->
+                </div>
+            </div>
+            <div class="slide fade active" role="group" aria-label="Slide 8 of 10">
+                <img src="/BagChk/images/bulls.jpg" alt="Chicago Bulls game at United Center" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Chicago Bulls Game at United Center</h3>
+                    <p class="text-[var(--text-light)]">Experience the electric atmosphere of a Chicago Bulls game at the iconic United Center. Drop your bags with BagChk and cheer without the hassle!</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: October 2025 (Season begins)</p> <!-- Added Date -->
+                </div>
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 9 of 10">
+                <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Lollapalooza in Grant Park</h3>
+                    <p class="text-[var(--text-light)]">Catch your favorite artists at Chicago’s biggest music festival. Skip the baggage blues with BagChk and enjoy the music hands-free.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: August 1-4, 2025</p> <!-- Added Date -->
+                </div>
+            </div>
+            <div class="slide fade" role="group" aria-label="Slide 10 of 10">
+                <img src="/BagChk/images/taste.jpg" alt="Taste of Chicago" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
+                <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
+                    <h3 class="text-lg sm:text-xl font-semibold mb-2">Taste of Chicago</h3>
+         <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: July 9-12, 2025</p> <!-- Added Date -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- 
 
 <div class="slide fade" role="group" aria-label="Slide 9 of 10">
     <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
@@ -653,7 +687,7 @@
     <h3 class="text-lg sm:text-xl font-semibold mb-2">Taste of Chicago</h3>
         <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
     </div>
-</div>                 
+</div>                  -->
  
                  <!-- Navigation Buttons -->
                 <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
