--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
                         <br></br>
 
             <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
+            <h5>Just Hand It To Us.</h5>
             <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
         </div>
     </section>
