--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div>
                     <h3 class="text-base sm:text-lg font-semibold mb-4">BagChk</h3>
-                    <p class="text-[var(--text-light)]">Secure luggage storage in Chicago. Just Hand It To Us.</p>
+                    <p class="text-[var(--text-light)]">Secure luggage storage in Chicago. <br>Just Hand It To Us.</br></p>
                 </div>
                 <div>
                     <h3 class="text-base sm:text-lg font-semibold mb-3">Quick Links</h3>
