--- a/index.html
+++ b/index.html
@@ -573,14 +573,13 @@
         </div>
     </section>
 
-    <!-- Slideshow Section -->
-    <section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Explore Chicago Events</h2>
-            <br></br>
-            <div class="slideshow-container relative">
+ <!-- Slideshow Section -->
+<section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Explore Chicago Events</h2>
         <br></br>
         <div class="slideshow-container relative">
+            <br></br>
             <!-- Slides -->
             <div class="slide fade" role="group" aria-label="Slide 1 of 10">
                 <img src="/BagChk/images/Air.jpg" alt="Chicago Air and Water Show" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
@@ -610,8 +609,16 @@
                 <img src="/BagChk/images/graduation.jpg" alt="Student Graduation Event" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                 <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Student Graduations & Events</h3>
-                    <p class="text-[var(--text-light)]">Celebrate graduations and student events in Chicago without the burden of luggage. BagChk keeps your belongings safe while you enjoy the moment.</p>
-                    <p class="text-[var(--text-light)] font-semibold">Date: Varies by institution</p> <!-- Added Date -->
+                    <p class="text-[var(--text-light)]">Celebrate graduations and student events in Chicago's universities. From May to June, Chicago's schools hold their commencement ceremonies, and BagChk is here to keep your bags safe while you celebrate!</p>
+                    <p class="text-[var(--text-light)] font-semibold">Date: May - June 2025 (varies by institution)</p> <!-- Added Date -->
+                    <ul class="text-[var(--text-light)]">
+                        <li>University of Chicago - Mid June</li>
+                        <li>Northwestern University - Late May</li>
+                        <li>DePaul University - Early June</li>
+                        <li>Columbia College Chicago - Mid May</li>
+                        <li>Chicago State University - Mid June</li>
+                        <li>Roosevelt University - Late May</li>
+                    </ul>
                 </div>
             </div>
             <div class="slide fade" role="group" aria-label="Slide 5 of 10">
@@ -647,11 +654,9 @@
                     <p class="text-[var(--text-light)] font-semibold">Date: October 2025 (Season begins)</p> <!-- Added Date -->
                 </div>
             </div>
-              <!-- Navigation Buttons -->
-                <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
-                <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
-
-               
+            <!-- Navigation Buttons -->
+            <button class="prev-btn absolute top-1/2 left-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-r-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Previous slide">❮</button>
+            <button class="next-btn absolute top-1/2 right-0 transform -translate-y-1/2 bg-[var(--primary)] text-white p-2 rounded-l-md hover:bg-[var(--primary-dark)] focus:outline-none focus:ring-2 focus:ring-[var(--primary)]" aria-label="Next slide">❯</button>
             <div class="slide fade" role="group" aria-label="Slide 9 of 10">
                 <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                 <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
@@ -664,14 +669,13 @@
                 <img src="/BagChk/images/taste.jpg" alt="Taste of Chicago" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
                 <div class="slide-caption bg-[var(--card-bg)] p-4 sm:p-6 rounded-lg">
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">Taste of Chicago</h3>
-         <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
+                    <p class="text-[var(--text-light)]">Sample dishes from across the city in one giant food fest. Drop your bags with BagChk and dig in stress-free.</p>
                     <p class="text-[var(--text-light)] font-semibold">Date: July 9-12, 2025</p> <!-- Added Date -->
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- 
 
 <div class="slide fade" role="group" aria-label="Slide 9 of 10">
     <img src="/BagChk/images/lolla.jpg" alt="Lollapalooza in Grant Park" class="w-full h-48 sm:h-64 lg:h-96 object-cover rounded-lg mb-4">
