--- a/index.html
+++ b/index.html
@@ -615,9 +615,9 @@
                         <li>University of Chicago - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Mid June</a></li>
                         <li>Northwestern University - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Late May</a></li>
                         <li>DePaul University - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Early June</a></li>
-                        <li>Columbia College Chicago - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Mid May</a></li>
+<!--                         <li>Columbia College Chicago - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Mid May</a></li>
                         <li>Chicago State University - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Mid June</a></li>
-                        <li>Roosevelt University - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Late May</a></li>
+                        <li>Roosevelt University - <a href="/BagChk/booking.html" class="text-[var(--primary)] hover:text-[var(--primary-dark)]">Late May</a></li> -->
                     </ul>
                 </div>
             </div>
