--- a/booking.html
+++ b/booking.html
@@ -1,4 +1,4 @@
-fix this to include all billing summary details to appear in qr code <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
